# realsense-cli

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: python-publish.yml
realsense_cli/: cli.py  model.py  printer.py  rs_bag_parser.py  stream_view.py  types.py  utils.py
realsense_cli/commands/: bag.py  config.py  stream.py
realsense_cli/commands/config/: app.py
realsense_cli/commands/safety/: __init__.py  interface.py  preset.py
realsense_cli/commands/stream/: app.py
realsense_cli/driver/: __init__.py  base.py  mock.py  realsense.py
realsense_cli/utils/: driver.py  rich.py  singleton.py
tests/: conftest.py  test_cli.py  test_driver.py  test_utils.py  utils.py
