[tool.poetry]
name = "realsense-cli"
version = "0.1.0"
description = ""
authors = ["Yehuda Garti <yeudag@gmail.com>"]
readme = "README.md"
packages = [{include = "realsense_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
pyrealsense2 = "^2.54.1"
loguru = "^0.7.0"

[tool.poetry.scripts]
rs = 'realsense_cli.cli:app'

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pytest = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=96

[tool.pytest.ini_options]
addopts = "-s -ra"
