[project]
name = "realsense-cli"
version = "v0.2.1"
description = ""
authors = [{ name = "Yehuda Garti", email = "yeudag@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "typer[all]>=0.9.0,<0.10",
    "pyrealsense2>=2.54.1,<3",
    "loguru>=0.7.0,<0.8",
    "rosbags>=0.9.19,<0.10",
]

[project.scripts]
rs = "realsense_cli.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.5.1,<2",
    "pytest>=7.4.1,<8",
    "black>=23.9.1,<24",
]

[tool.hatch.build.targets.sdist]
include = ["realsense_cli"]

[tool.hatch.build.targets.wheel]
include = ["realsense_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length=96

[tool.pytest.ini_options]
addopts = "-s -ra"
