[project]
name = "realsense-cli"
version = "0.3.0"
description = ""
authors = [{ name = "Yehuda Garti", email = "yeudag@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "typer[all]>=0.9.0",
    "pyrealsense2>=2.54.1",
    "loguru>=0.7.0",
    "rosbags>=0.9.19",
]

[project.scripts]
rs = "realsense_cli.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.5.1",
    "pytest>=7.4.1",
    "black>=23.9.1",
]

[tool.hatch.build.targets.sdist]
include = ["realsense_cli"]

[tool.hatch.build.targets.wheel]
include = ["realsense_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length=96

[tool.pytest.ini_options]
addopts = "-s -ra -m 'not hardware'"
markers = ["hardware: requires a physical RealSense device to be connected"]
